# CoMe

./: .gitignore  NOTICE.md  README.md  environment.yml  extract_mesh_tets.py  extract_mesh_tsdf.py  index.html  mesh_viewer.py  metrics.py  render.py  train.py
arguments/: __init__.py
configs/: hierarchical.json
gaussian_renderer/: __init__.py  network_gui.py
mesh_utils/: compare.py  convert_to_log_file.py  eval_DTU.py  eval_SCN.py  eval_TNT.py  evaluate_single_scene.py  evaluation.py  registration.py
scene/: __init__.py  appearance_network.py  cameras.py  dataset_readers.py  densifier.py  gaussian_model.py  lib_bilarf.py  mesh.py
scripts/: constants.py  latex_utils.py  run_dtu.py  run_nvs.py  run_scn.py  run_tnt.py  show_dtu.py  show_nvs.py  show_scn.py  show_tnt.py
splatviz/: splatviz.py  test.txt
splatviz/renderer/: attach_renderer.py  base_renderer.py  gaussian_renderer.py
splatviz/widgets/: cam_widget.py  render_widget.py
static/css/: index.css
static/js/: index.js  video_comparison.js
submodules/decoupled-fused-ssim/: .gitignore  README.md  pyproject.toml  setup.py  ssim.cu  ssim.h
submodules/decoupled-fused-ssim/decoupled_fused_ssim/: __init__.py
submodules/decoupled-fused-ssim/decoupled_fused_ssim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
submodules/decoupled-fused-ssim/tests/: test_decoupled_ssim.py  test_fused_ssim_scene.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  ext.cpp  (+3 more)
utils/: camera_utils.py  depth_utils.py  general_utils.py  geometry_utils.py  loss_utils.py  reloc_utils.py  sb_utils.py  vis_utils.py
(+16 files in other folders)
